|| Version 1.43.3rc6 changes ||
  * Sat Oct 18 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a multi-user conflict where several backups could attempt to create
      the package list file(s) simultaneously, causing one of the two backups to
      fail
    - Fixed a bug that prevented fwbackups from importing pre-1.43.2beta3
      configuration files
    
  * Sat Oct 9 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a problem where excessive stderr output in subprocesses would cause
      fwbackups to hang. The file currently being backed up can no longer be
      displayed.
  
  * Sat Oct 2 2010 Stewart Adam <s.adam at diffingo.com>
    - Fix a bug where subdirectories could not be created in a direct copy
      backup to a remote host over SFTP
    - Fix a traceback when opening the restore window and the set destination
      could not be found
  
  * Mon Sep 27 2010 Stewart Adam <s.adam at diffingo.com>
    - Re-enable use of AM_GLIB_GNU_GETTEXT. Leaving it out causes problems on
      CentOS
  
  * Thu Aug 5 2010 Stewart Adam <s.adam at diffingo.com>
    - Make manual time selection easier to use
  
  * Fri Jul 9 2010 Stewart Adam <s.adam at diffingo.com>
    - Do not attempt to parse and generate the text for crontab entries already
      in the crontab, allowing fwbackups to preserve formatting, spacing,
      comments and variables such as "   HOME=/foobar   # foobar  spaces"
    - Backup the crontab before making any modifications and restore the
      original in the event of an error
    - Add a signature to crontab entries generated by fwbackups, enabling
      the cleaner to distinguish between generated entries and fwbackups-run
      entries added by the user
    - Add a timer when saving the crontab, killing the crontab process after 6
      seconds of waiting; fwbackups no longer hangs when the crontab cannot be
      saved due to an error in the manual times entry
  
  * Wed Jul 7 2010 Stewart Adam <s.adam at diffingo.com>